# AIJourney_AI4Bio_4th

./: .gitignore  pyproject.toml  readme.md
source/: augmentation.py  constants.py  evaluate.py  feature_building.py  generation.py  metrics.py  plotting.py  solution.py  test.py  train.py
source/nn/: dataset.py
source/nn/nn_blocks/: base.py
source/nn/nn_blocks/encoders/: __init__.py  base.py  baseline.py  resnet_backteriaID.py
source/nn/nn_blocks/heads/: __init__.py  amsoftmax.py  base.py  linear.py
source/nn/nn_blocks/losses/: label_smoothing.py
source/nn/nn_blocks/zoo/: resnet.py
source/output/: results.csv
source/utils/: base.py  pkf.py
