[tool.poetry]
name = "aijourney"
version = "0.1.0"
description = ""
authors = ["Alexey Logunov <khabalexlogunov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
tqdm = "^4.64.1"
pandas = "^1.5.1"
scipy = "^1.9.2"
matplotlib = "^3.6.1"
scikit-learn = "1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
